# CCTV_HaLow

./: .gitignore  CMakeLists.txt  README.md  booting.sh
app/client/: client_main.cc
app/server/: server_main.cc
code/: getStatusInfo.cc  getStatusInfo.cpp  networkTraffic  networkTraffic.cc  networkTraffic.cpp  signalLevel.cpp  sinalLevel
gRPC/: CMakeLists.txt  README.md  opencv_cmake.sh
gRPC/app/client/: CMakeLists.txt  client_main.cc
gRPC/app/server/: CMakeLists.txt  server_main.cc
gRPC/include/client/: ClientVideoStreamer.h  MemoryVideoWriter.h  shape.h
gRPC/include/server/: ServerVideoStreamer.h  WebSockVariable.h  directoryAPI.h  httplib.h
gRPC/lib/: CMakeLists.txt
gRPC/lib/client/: ClientCheckPi.cc  ClientVideoStreamer.cc  MemoryVideoWriter.cc  shape.cc
gRPC/protos/: streaming.proto
gRPC/tests/: CMakeLists.txt
include/client/: ClientCheckPi.h  ClientVideoStreamer.h  Grpc.h  MemoryVideoWriter.h
include/server/: ServerVideoStreamer.h  WebSockVariable.h  directoryAPI.h  httplib.h
lib/: CMakeLists.txt
lib/client/: ClientCheckPi.cc  ClientVideoStreamer.cc  Grpc.cc  MemoryVideoWriter.cc  Vision.cc  camera.cc  signalLevel.cc
lib/server/: ServerStartAPI.cc  ServerVideoStreamer.cc  WebSockVariable.cc  browser copy.html  directoryAPI.cc  hlsjs.html
protos/: streaming.proto
video/pi5/: output.m3u8  output0.ts  output1.ts  output10.ts  output2.ts  output3.ts  output4.ts  output5.ts  output6.ts  output7.ts  output8.ts  output9.ts
videosample/: output.m3u8  output0.ts  output1.ts  output2.ts  output3.ts  output4.ts
(+7 files in other folders)
